--- a/src/panfrost/bifrost/meson.build
+++ b/src/panfrost/bifrost/meson.build
@@ -33,6 +33,7 @@ libpanfrost_bifrost_files = files(
   'bi_opt_dce.c',
   'bi_opt_cse.c',
   'bi_opt_push_ubo.c',
+  'bi_opt_message_preload.c',
   'bi_opt_mod_props.c',
   'bi_opt_dual_tex.c',
   'bi_pack.c',
