vulkan: Add a common vk_framebuffer struct
Reviewed-by: Ivan Briano <ivan.briano@intel.com>

--- a/src/vulkan/runtime/meson.build
+++ b/src/vulkan/runtime/meson.build
@@ -42,6 +42,8 @@ vulkan_runtime_files = files(
   'vk_device.h',
   'vk_fence.c',
   'vk_fence.h',
+  'vk_framebuffer.c',
+  'vk_framebuffer.h',
   'vk_image.c',
   'vk_image.h',
   'vk_instance.c',
