--- a/src/panfrost/ci/deqp-panfrost-g52-vk.toml
+++ b/src/panfrost/ci/deqp-panfrost-g52-vk.toml
@@ -4,16 +4,12 @@ caselists = ["/deqp/mustpass/vk-master.txt"]
 renderer_check = "Mali-G52"
 include = [
     "dEQP-VK.pipeline.blend.*",
+    "dEQP-VK.api.buffer_view.*",
     "dEQP-VK.api.copy_and_blit.core.*",
     "dEQP-VK.compute.builtin_var.*",
     "dEQP-VK.glsl.builtin.function.integer.usubborrow.*",
     "dEQP-VK.glsl.builtin.precision.frexp.*",
     "dEQP-VK.glsl.builtin.precision.ldexp.*",
-    "dEQP-VK.image.load_store.with_format.1d.*",
-    "dEQP-VK.image.load_store.with_format.1d_array.*",
-    "dEQP-VK.image.load_store.with_format.2d.*",
-    "dEQP-VK.image.load_store.with_format.2d_array.*",
-    "dEQP-VK.image.load_store.with_format.3d.*",
-    "dEQP-VK.image.load_store.with_format.cube.*",
+    "dEQP-VK.image.load_store.with_format.*",
     "dEQP-VK.ssbo.layout.single_basic_type.*",
 ]
