ci/nouveau: Add a manual run for the Jetson Nano (GM20B).
The test suite is full of flakes around transform feedback, atomics, and
tess.  But, I hope it can be useful for regression testing core Mesa
reworks.

This required updating the kernel to 5.16.12 to get a more stable boot
process.  That kernel rebuild caused an update of the container with
piglit which that was missed in a previous MR, so we got new xfails in x86
swrast.

Acked-by: Ilia Mirkin <imirkin@alum.mit.edu> (nouveau)

--- a/.gitlab-ci/test-source-dep.yml
+++ b/.gitlab-ci/test-source-dep.yml
@@ -227,6 +227,24 @@
       when: manual
     - when: never
 
+.nouveau-rules:
+  stage: nouveau
+  rules:
+    - *ignore_scheduled_pipelines
+    - changes:
+        *mesa_core_file_list
+      when: on_success
+    - changes:
+        *gallium_core_file_list
+      when: on_success
+    - changes:
+      - src/nouveau/**/*
+      - src/gallium/drivers/nouveau/**/*
+      - src/gallium/winsys/kmsro/**/*
+      - src/gallium/winsys/nouveau/**/*
+      when: on_success
+    - when: never
+
 .panfrost-midgard-rules:
   stage: arm
   rules:
