--- a/.gitlab-ci/image-tags.yml
+++ b/.gitlab-ci/image-tags.yml
@@ -8,11 +8,11 @@ variables:
    DEBIAN_X86_TEST_BASE_IMAGE: "debian/x86_test-base"
 
    DEBIAN_X86_TEST_IMAGE_PATH: "debian/x86_test-gl"
-   DEBIAN_X86_TEST_GL_TAG: "2022-02-21-libdrm"
+   DEBIAN_X86_TEST_GL_TAG: "2022-03-03-nouveau"
    DEBIAN_X86_TEST_VK_TAG: "2022-02-21-libdrm"
 
    FEDORA_X86_BUILD_TAG: "2022-02-21-libdrm"
-   KERNEL_ROOTFS_TAG: "2022-02-23-noxz"
+   KERNEL_ROOTFS_TAG: "2022-03-03-nouveau"
 
    WINDOWS_X64_BUILD_PATH: "windows/x64_build"
    WINDOWS_X64_BUILD_TAG: "2022-20-02-base_split"
