--- a/src/broadcom/ci/gitlab-ci.yml
+++ b/src/broadcom/ci/gitlab-ci.yml
@@ -4,7 +4,7 @@
     - .vc4-rules
     - .use-debian/arm_test
   variables:
-    BM_BOOTFS: /boot/raspberrypi_armhf
+    BM_BOOTFS: /boot/raspberrypi_armhf/boot
     GPU_VERSION: broadcom-rpi3
     HWCI_KERNEL_MODULES: vc4
     FLAKES_CHANNEL: "#videocore-ci"
@@ -67,7 +67,7 @@ vc4-rpi3-piglit-quick_shader:armhf:
     - .use-debian/arm_test
   variables:
     HWCI_TEST_SCRIPT: "/install/deqp-runner.sh"
-    BM_BOOTFS: /boot/raspberrypi_armhf
+    BM_BOOTFS: /boot/raspberrypi_armhf/boot
     BM_POE_TIMEOUT: 300
     FLAKES_CHANNEL: "#videocore-ci"
     GPU_VERSION: broadcom-rpi4
@@ -113,7 +113,7 @@ v3dv-rpi4-vk:arm64:
   parallel: 8
   variables:
     HWCI_TEST_SCRIPT: "/install/deqp-runner.sh"
-    BM_BOOTFS: /boot/raspberrypi_arm64
+    BM_BOOTFS: /boot/raspberrypi_arm64/boot
     BM_POE_TIMEOUT: 300
     DEQP_EXPECTED_RENDERER: "V3D.4.2"
     DEQP_FRACTION: 5
