ci: skqp: Add Vulkan support for a630_skqp job
This commit adds support for Vulkan backend on a630_skqp job.

= Needed changes
- Needed to install libvulkan-dev package on system
- Refactored the way the available skqp reports are printed
  tested in development builds with skia tools

Piglit expectations had to be updated in various drivers due to !14750 not
having bumped the tags when it tried to uprev.

Signed-off-by: Guilherme Gallo <guilherme.gallo@collabora.com>
Reviewed-by: Emma Anholt <emma@anholt.net>
Part-of: <https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/14686>

--- a/src/freedreno/ci/gitlab-ci.yml
+++ b/src/freedreno/ci/gitlab-ci.yml
@@ -214,8 +214,8 @@ a630_skqp:
     - .a630-test
   variables:
     # Possible skqp backends: gl, gles, unitTest and vk
-    # Note: vk backend is not working yet.
-    SKQP_BACKENDS: gl gles unitTest  # space separated values
+    SKQP_BACKENDS: gl gles vk unitTest  # space separated values
+    VK_DRIVER: freedreno
 
 a630_vk:
   extends:
