--- a/.gitlab-ci/image-tags.yml
+++ b/.gitlab-ci/image-tags.yml
@@ -12,7 +12,7 @@ variables:
    DEBIAN_X86_TEST_VK_TAG: "2022-02-21-libdrm"
 
    FEDORA_X86_BUILD_TAG: "2022-02-21-libdrm"
-   KERNEL_ROOTFS_TAG: "2022-02-21-libdrm"
+   KERNEL_ROOTFS_TAG: "2022-02-23-skqp"
 
    WINDOWS_X64_BUILD_PATH: "windows/x64_build"
    WINDOWS_X64_BUILD_TAG: "2022-20-02-base_split"
