--- a/src/gallium/drivers/zink/ci/deqp-zink-lvp.toml
+++ b/src/gallium/drivers/zink/ci/deqp-zink-lvp.toml
@@ -25,6 +25,18 @@ deqp_args = [
 timeout = 180.0
 
 [[deqp]]
+deqp = "/deqp/modules/gles31/deqp-gles31"
+caselists = ["/deqp/mustpass/gles31-master.txt"]
+deqp_args = [
+    "--deqp-surface-width=256",
+    "--deqp-surface-height=256",
+    "--deqp-surface-type=pbuffer",
+    "--deqp-gl-config-name=rgba8888d24s8ms0",
+    "--deqp-visibility=hidden"
+]
+timeout = 180.0
+
+[[deqp]]
 deqp = "/deqp/external/openglcts/modules/glcts"
 caselists = [
     "/deqp/mustpass/gl46-master.txt",
