radv: Enable BO cache for Elden Ring.
Reviewed-by: Samuel Pitoiset <samuel.pitoiset@gmail.com>

--- a/src/util/00-mesa-defaults.conf
+++ b/src/util/00-mesa-defaults.conf
@@ -1004,6 +1004,10 @@ TODO: document the other workarounds.
         <application name="The Evil Within 2" application_name_match="TEW2.exe">
             <option name="radv_disable_aniso_single_level" value="true" />
         </application>
+
+        <application name="Elden Ring" application_name_match="eldenring.exe">
+            <option name="radv_bo_cache" value="true" />
+        </application>
     </device>
 
     <device driver="virtio_gpu">
