ci: Allow disabling the whole of the Collabora farm
Add a global-level variable that allows disabling all jobs that would
have gone to the Collabora lab, to be used in case of outages.

Signed-off-by: Tomeu Vizoso <tomeu.vizoso@collabora.com>

--- a/.gitlab-ci/lava/lava-gitlab-ci.yml
+++ b/.gitlab-ci/lava/lava-gitlab-ci.yml
@@ -28,6 +28,8 @@
       - results/
     exclude:
       - results/*.shader_cache
+  tags:
+    - $RUNNER_TAG
   after_script:
     - wget -q "https://${JOB_RESULTS_PATH}" -O- | tar -xz
 
