radeonsi/drirc: use force_gl_vendor for Maya
Otherwise OpenCL initialization fails with "unknown vendor id 0".

Reviewed-by: Qiang Yu <yuq825@gmail.com>

--- a/src/util/00-mesa-defaults.conf
+++ b/src/util/00-mesa-defaults.conf
@@ -381,6 +381,11 @@ TODO: document the other workarounds.
             <option name="allow_rgb10_configs" value="false" />
         </application>
 
+        <application name="Maya" executable="maya.bin">
+            <!-- Needed otherwise the app doesn't try to use OpenCL -->
+            <option name="force_gl_vendor" value="ATI Technologies Inc." />
+        </application>
+
         <!-- The GL thread allowlist is below, workarounds are above.
              Keep it that way. -->
 
