--- a/meson_options.txt
+++ b/meson_options.txt
@@ -509,3 +509,12 @@ option(
   value : false,
   description : 'Build vulkan drivers with BETA extensions enabled.'
 )
+option(
+  'video-codecs',
+  type : 'array',
+  value : [''],
+  choices: [
+    '', 'vc1dec', 'h264dec', 'h264enc', 'h265dec', 'h265enc'
+  ],
+  description : 'List of patent encumbered codecs to build support for. Distros might want to consult their legal department before enabling these. This is used for all video APIs (vaapi, vdpau, vulkan). Non-patent encumbered codecs will be enabled by default.'
+)
