--- a/meson.build
+++ b/meson.build
@@ -311,6 +311,20 @@ if with_vulkan_beta
   pre_args += '-DVK_ENABLE_BETA_EXTENSIONS'
 endif
 
+_codecs = get_option('video-codecs')
+if _codecs.contains('h264dec')
+  pre_args += '-DVIDEO_CODEC_H264DEC'
+endif
+if _codecs.contains('h264enc')
+  pre_args += '-DVIDEO_CODEC_H264ENC'
+endif
+if _codecs.contains('h265dec')
+  pre_args += '-DVIDEO_CODEC_H265DEC'
+endif
+if _codecs.contains('h265enc')
+  pre_args += '-DVIDEO_CODEC_H265ENC'
+endif
+
 _platforms = get_option('platforms')
 if _platforms.contains('auto')
   if system_has_kms_drm
@@ -2240,6 +2254,9 @@ if with_gbm
 endif
 
 lines += ''
+lines += 'Video Codecs: ' + ' '.join(_codecs)
+lines += ''
+
 if with_any_vk
   lines += 'Vulkan drivers:  ' + ' '.join(_vulkan_drivers)
   lines += 'Vulkan ICD dir:  ' + with_vulkan_icd_dir
