vulkan/cmd_queue: Generate enqueue entrypoints

--- a/src/vulkan/runtime/meson.build
+++ b/src/vulkan/runtime/meson.build
@@ -108,6 +108,18 @@ vk_cmd_queue = custom_target(
   depend_files : vk_cmd_queue_gen_depend_files,
 )
 
+vk_cmd_enqueue_entrypoints = custom_target(
+  'vk_cmd_enqueue_entrypoints',
+  input : [vk_entrypoints_gen, vk_api_xml],
+  output : ['vk_cmd_enqueue_entrypoints.h', 'vk_cmd_enqueue_entrypoints.c'],
+  command : [
+    prog_python, '@INPUT0@', '--xml', '@INPUT1@', '--proto', '--weak',
+    '--out-h', '@OUTPUT0@', '--out-c', '@OUTPUT1@',
+    '--prefix', 'vk_cmd_enqueue',
+  ],
+  depend_files : vk_entrypoints_gen_depend_files,
+)
+
 vk_dispatch_trampolines = custom_target(
   'vk_dispatch_trampolines',
   input : [vk_dispatch_trampolines_gen, vk_api_xml],
@@ -132,7 +144,8 @@ vk_physical_device_features = custom_target(
 
 libvulkan_runtime = static_library(
   'vulkan_runtime',
-  [vulkan_runtime_files, vk_common_entrypoints, vk_cmd_queue,
+  [vulkan_runtime_files, vk_common_entrypoints,
+   vk_cmd_queue, vk_cmd_enqueue_entrypoints,
    vk_dispatch_trampolines, vk_physical_device_features],
   include_directories : [inc_include, inc_src, inc_gallium],
   dependencies : vulkan_runtime_deps,
