vulkan,lavapipe: Move some enqueue helpers to common code

--- a/src/vulkan/runtime/meson.build
+++ b/src/vulkan/runtime/meson.build
@@ -25,6 +25,7 @@ vk_physical_device_features_gen_depend_files = [
 
 vulkan_runtime_files = files(
   'vk_cmd_copy.c',
+  'vk_cmd_enqueue.c',
   'vk_command_buffer.c',
   'vk_command_buffer.h',
   'vk_command_pool.c',
