--- a/src/panfrost/ci/deqp-panfrost-g52-vk.toml
+++ b/src/panfrost/ci/deqp-panfrost-g52-vk.toml
@@ -7,6 +7,7 @@ include = [
     "dEQP-VK.api.buffer_view.*",
     "dEQP-VK.api.copy_and_blit.core.*",
     "dEQP-VK.compute.builtin_var.*",
+    "dEQP-VK.draw.renderpass.instanced.draw_indexed_vk_*",
     "dEQP-VK.image.load_store.with_format.*",
     "dEQP-VK.ssbo.layout.single_basic_type.*",
 ]
