--- a/src/panfrost/ci/deqp-panfrost-g52-vk.toml
+++ b/src/panfrost/ci/deqp-panfrost-g52-vk.toml
@@ -10,6 +10,10 @@ include = [
     "dEQP-VK.glsl.builtin.function.integer.usubborrow.*",
     "dEQP-VK.glsl.builtin.precision.frexp.*",
     "dEQP-VK.glsl.builtin.precision.ldexp.*",
+    "dEQP-VK.glsl.conversions.*",
+    "dEQP-VK.glsl.derivate.*.constant.*",
+    "dEQP-VK.glsl.derivate.*.linear.*",
+    "dEQP-VK.glsl.derivate.*.uniform_*",
     "dEQP-VK.image.load_store.with_format.*",
     "dEQP-VK.pipeline.sampler.view_type.*.format.r*.address_modes.all_mode_clamp_to_border*",
     "dEQP-VK.ssbo.layout.single_basic_type.*",
