ci/softpipe,llvmpipe,zink: Enable backing store in Xvfb.
deqp-runner runs all the piglit tests in parallel, regardless of piglit's
run_concurrent.  This means that tests which read the front buffer may
race to get their front buffer data trashed by another test putting a
window up overlapping theirs.  Most tests don't put up a window thanks to
"-fbo", but there are some like frontbuffer or swap sync tests.

We could fix deqp-runner to have a single-threaded pass for
!run_concurrent tests, but that would be a massive waste of runner CPU
capacity for the front buffer tests.  Instead, enable automatic
compositing in the X server, affecting the few tests that actually present
a window.  Now, their front buffer contents don't get stomped (and we
actually test something closer to the front buffer rendering behavior on
the server side that you're going to experience on any modern desktop).

I expect this to clean up the flakes involving front buffer rendering on
these drivers, but I'll wait a couple of weeks and watch the flake reports
before doing so.

--- a/src/gallium/drivers/llvmpipe/ci/gitlab-ci.yml
+++ b/src/gallium/drivers/llvmpipe/ci/gitlab-ci.yml
@@ -49,7 +49,7 @@ llvmpipe:
     DEQP_SUITE: llvmpipe
   extends: .llvmpipe-deqp-test
   script:
-    - LD_LIBRARY_PATH=`pwd`/install xvfb-run --server-args='-noreset' install/deqp-runner.sh
+    - LD_LIBRARY_PATH=`pwd`/install xvfb-run --server-args='-noreset +bs' install/deqp-runner.sh
 
 llvmpipe-deqp-asan:
   variables:
