bifrost: Constant fold after lower_explicit_io
nir_lower_explicit_io generates mul+add chains even for constants.  One
round of constant folding should get rid of these.  This fixes all of
the dEQP-VK.glsl.conversions.* tests on panvk.

--- a/src/panfrost/ci/deqp-panfrost-g52-vk.toml
+++ b/src/panfrost/ci/deqp-panfrost-g52-vk.toml
@@ -9,6 +9,7 @@ include = [
     "dEQP-VK.glsl.builtin.function.integer.usubborrow.*",
     "dEQP-VK.glsl.builtin.precision.frexp.*",
     "dEQP-VK.glsl.builtin.precision.ldexp.*",
+    "dEQP-VK.glsl.conversions.*",
     "dEQP-VK.image.load_store.with_format.1d.*",
     "dEQP-VK.image.load_store.with_format.1d_array.*",
     "dEQP-VK.image.load_store.with_format.2d.*",
