bifrost: Lower usub_borrow
Reviewed-by: Alyssa Rosenzweig <alyssa.rosenzweig@collabora.com>

--- a/src/panfrost/ci/deqp-panfrost-g52-vk.toml
+++ b/src/panfrost/ci/deqp-panfrost-g52-vk.toml
@@ -6,6 +6,7 @@ include = [
     "dEQP-VK.pipeline.blend.*",
     "dEQP-VK.api.copy_and_blit.core.*",
     "dEQP-VK.compute.builtin_var.*",
+    "dEQP-VK.glsl.builtin.function.integer.usubborrow.*",
     "dEQP-VK.image.load_store.with_format.1d.*",
     "dEQP-VK.image.load_store.with_format.1d_array.*",
     "dEQP-VK.image.load_store.with_format.2d.*",
