--- a/src/panfrost/ci/deqp-panfrost-g52-vk.toml
+++ b/src/panfrost/ci/deqp-panfrost-g52-vk.toml
@@ -15,5 +15,6 @@ include = [
     "dEQP-VK.image.load_store.with_format.2d_array.*",
     "dEQP-VK.image.load_store.with_format.3d.*",
     "dEQP-VK.image.load_store.with_format.cube.*",
+    "dEQP-VK.pipeline.sampler.view_type.*.format.r*.address_modes.all_mode_clamp_to_border*",
     "dEQP-VK.ssbo.layout.single_basic_type.*",
 ]
